Fix Java Lang imports (#367)
* fix java lang imports

* actually uppercase