@@ -120,9 +120,11 @@ public interface UType {
 
     @Override
     public Set<String> importTypes() {
-      return rawType.startsWith("java.lang.") && rawType.indexOf('.') > -1
-        ? Set.of()
-        : Collections.singleton(rawType.replace("[]", ""));
+      return rawType.startsWith("java.lang.")
+              && Character.isUpperCase(rawType.charAt(10))
+              && rawType.indexOf('.') > -1
+          ? Set.of()
+          : Collections.singleton(rawType.replace("[]", ""));
     }
 
     @Override
